<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_choose_connection">

    <fragment
        android:id="@+id/nav_choose_connection"
        android:name="com.example.remotemouse.ui.chooseConnection.ChooseConnectionFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_choose_connection" />

    <fragment
        android:id="@+id/nav_touchpad"
        android:name="com.example.remotemouse.ui.touchpad.TouchpadFragment"
        android:label="@string/menu_panel"
        tools:layout="@layout/fragment_touchpad" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.remotemouse.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>